尝试添加微信接口

--- a/Alexis.Social.WindowsPhone8/Alexis.Social.WindowsPhone8.csproj
+++ b/Alexis.Social.WindowsPhone8/Alexis.Social.WindowsPhone8.csproj
@@ -195,6 +195,10 @@
       <Link>Resources\LangResource.zh-TW.resx</Link>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\wechat_circle.png" />
+    <Content Include="Images\wechat_friend.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
